# lifetimed-bytes

./: Cargo.toml  README.md
src/: lib.rs
tests/ui/: lifetime_error.rs  lifetime_error.stderr
